--- a/24SportWebkatalog/Views/Account/Index.cshtml
+++ b/24SportWebkatalog/Views/Account/Index.cshtml
@@ -7,7 +7,10 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Opret ny bruger", "Register")
+</p>
+<p>
+    @Html.ActionLink("Log på", "Login")
 </p>
 <table class="table">
     <tr>
