--- a/24SportWebkatalog/Views/Account/Loggedin.cshtml
+++ b/24SportWebkatalog/Views/Account/Loggedin.cshtml
@@ -3,8 +3,5 @@
     ViewBag.Title = "Loggedin";
 }
 
-@if (Session["UserID"] !=null)
-{
-    <h4>Hello @Session["Username"].ToString()</h4>
-}
+<h2>Loggedin</h2>
 
