--- a/24SportWebkatalog/Views/Account/Register.cshtml
+++ b/24SportWebkatalog/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model _24SportWebkatalog.Models.UserAccount
+﻿@model _24SportWebkatalog.Models.userinfo
 
 @{
     ViewBag.Title = "Register";
@@ -6,23 +6,22 @@
 
 <h2>Register</h2>
 
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UserAccount</h4>
+        <h4>userinfo</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @if (ViewBag.Message !=null)
-        {
-            <div class="form-group">
-                <div class="col-md-10"> @ViewBag.Message</div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.UserID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
             </div>
-            
+        </div>
 
-        }
         <div class="form-group">
             @Html.LabelFor(model => model.firstname, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -82,7 +81,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
