--- a/24SportWebkatalog/Views/Account/Index.cshtml
+++ b/24SportWebkatalog/Views/Account/Index.cshtml
@@ -7,7 +7,8 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Opret ny bruger", "Register")
+    @Html.ActionLink("Log in", "Login")
 </p>
 <table class="table">
     <tr>
