--- a/24SportWebkatalog/Views/Account/Loggedin.cshtml
+++ b/24SportWebkatalog/Views/Account/Loggedin.cshtml
@@ -3,5 +3,8 @@
     ViewBag.Title = "Loggedin";
 }
 
-<h2>Loggedin</h2>
 
+@if (Session["UserID"] !=null)
+{
+     <h4>Hello @Session["Username"].ToString()</h4>
+}
