--- a/24SportWebkatalog/Views/Account/Register.cshtml
+++ b/24SportWebkatalog/Views/Account/Register.cshtml
@@ -14,6 +14,13 @@
         <h4>userinfo</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @if (ViewBag.message !=null)
+        {
+            <div class="form-group">
+                <div class="col-md-10">@ViewBag.Message
+                </div>
+            </div>
+        }
         <div class="form-group">
             @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
