--- a/24SportWebkatalog/Views/Catalog/MainCatalog.cshtml
+++ b/24SportWebkatalog/Views/Catalog/MainCatalog.cshtml
@@ -14,7 +14,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ItemId)
+            @Html.DisplayNameFor(model => model.Id)
         </th>   
         <th>
             @Html.DisplayNameFor(model => model.ItemName)
@@ -34,7 +34,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayNameFor(model => model.ItemId)
+            @Html.DisplayNameFor(model => model.Id)
         </td>
         <td>
             @Html.DisplayNameFor(model => model.ItemName)
@@ -49,9 +49,9 @@
             @Html.DisplayNameFor(model => model.Description)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ItemId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ItemId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ItemId })
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
