--- a/24SportWebkatalog/Views/Account/Loggedin.cshtml
+++ b/24SportWebkatalog/Views/Account/Loggedin.cshtml
@@ -6,5 +6,5 @@
 
 @if (Session["UserID"] !=null)
 {
-     <h4>Hello @Session["Username"].ToString()</h4>
+     <h4>Velkommen @Session["Username"].ToString()</h4>
 }
