--- a/24SportWebkatalog/Views/Shared/_Layout.cshtml
+++ b/24SportWebkatalog/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Login", "Index", "Account")</li>
-                    <li>@Html.ActionLink("Webkatalog", "MainCatalog", "Catalog")</li>
+                    <li>@Html.ActionLink("Login", "Login", "Account")</li>
+                    <li>@Html.ActionLink("Katalog", "MainCatalog", "Catalog")</li>
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
                 </ul>
             </div>
@@ -31,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - 24Sport Webkatalog EASJ</p>
         </footer>
     </div>
 
