--- a/24SportWebkatalog/Views/Account/Login.cshtml
+++ b/24SportWebkatalog/Views/Account/Login.cshtml
@@ -23,7 +23,7 @@
         }
 
         .error {
-            padding-left: 400px;
+            padding-left: 475px;
             font-weight: bold;
             width: 1000px;
             color: red;
@@ -48,7 +48,10 @@
             </div>
 
             <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="error">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            </div>
+           
 
 
             <div class="form-group centerlook">
@@ -77,9 +80,9 @@
                     <a href="~/Account/Register" class="btn btn-default" role="button">Registrer  </a>
                 </div>
             </div>
-        <div class=" form-group centerlook">
+        @*<div class=" form-group centerlook">
             @Html.ActionLink("Back to List", "Index")
-        </div>
+        </div>*@
        
      </div>
     }
