--- a/24SportWebkatalog/Views/Account/Register.cshtml
+++ b/24SportWebkatalog/Views/Account/Register.cshtml
@@ -1,10 +1,10 @@
 ﻿@model _24SportWebkatalog.Models.userinfo
 
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Opret bruger";
 }
 
-<h2>Register</h2>
+<h2>Opret bruger</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -70,12 +70,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Opret bruger" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Gå tilbage", "Index")
 </div>
