--- a/24SportWebkatalog/Views/Home/Contact.cshtml
+++ b/24SportWebkatalog/Views/Home/Contact.cshtml
@@ -1,17 +1,17 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Kontakt";
 }
 <h2>Kontakt informationer</h2>
 <h3>Herunder finder du informationer til at kontakte os</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    +45 42654137
+    24 Sportspræmier & Emblemer<br />
+    Hovedgaden 20, 4652 Hårlev<br />
+    Telefon: +45 40302202<br />
+    
 </address>
 
 <address>
     <strong>Support:</strong>   <a href="mailto:Fabianwendell@hotmail.com">FabianWendell@hotmail.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">24Sport's Email</a>
+    <strong>Marketing:</strong> <a href="mailto:andreas_kjelstrup@hotmail.com">andreas_kjelstrup@hotmail.com</a>
 </address>
