Ændrede Visuelle ting samt prøvede nogle billeder

--- a/24SportWebkatalog/Views/Account/Register.cshtml
+++ b/24SportWebkatalog/Views/Account/Register.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Opret bruger";
 }
 
-<h2>Opret bruger</h2>
+<h2>Opret bruger.</h2>
+<h3>Når du har oprettet en bruger vil du være i stand til at kunne bestille de diverse produkter.</h3>
 
 @using (Html.BeginForm()) 
 {
