--- a/24SportWebkatalog/Views/Account/Login.cshtml
+++ b/24SportWebkatalog/Views/Account/Login.cshtml
@@ -32,6 +32,15 @@
         .loginbtn {
             padding-left: 500px;
         }
+
+        body {
+            background-image: url('../../Images/medals-1622902_960_720.png');
+            background-repeat: no-repeat;
+            background-size:contain;
+            
+        }
+
+
     </style>
 
 </head>
@@ -41,6 +50,8 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
+    <div class="container list-unstyled">
+
 
         <div class="form-horizontal">
             <div class="form-group centerlook">
@@ -51,7 +62,7 @@
             <div class="error">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             </div>
-           
+
 
 
             <div class="form-group centerlook">
@@ -80,12 +91,13 @@
                     <a href="~/Account/Register" class="btn btn-default" role="button">Registrer  </a>
                 </div>
             </div>
-        @*<div class=" form-group centerlook">
-            @Html.ActionLink("Back to List", "Index")
-        </div>*@
-       
-     </div>
-    }
+            @*<div class=" form-group centerlook">
+                @Html.ActionLink("Back to List", "Index")
+            </div>*@
 
+        </div>
+     
+    </div>
+    }
 </body>
 </html>
