--- a/24SportWebkatalog/Views/Home/Index.cshtml
+++ b/24SportWebkatalog/Views/Home/Index.cshtml
@@ -3,29 +3,26 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Velkommen til 24 Sportspræmier & Emblemer </h1>
+    <p class="lead">Hjemmesiden for de flottese præmier til de bedste priser!</p>
+    <p><a href=" ~/Account/Login" class="btn btn-primary btn-lg">Log venlist ind for at fortsætte &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Hvem er vi?</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Tekst om firma, hvem er vi, hvor længe har vi gjort dette og hvordan startede det?
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Hvad Levere vi?</h2>
+        <p>24 Sportspræmier & Emblemer er et firma som fokusere på at udlevere flotte medaljer, hurtigt og præcist til en lille pris</p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Hvor kan du finde os?</h2>
+        <p>Vi har en forretning på Hovedgaden 20, 4652 Hårlev. </p>
+        <p><a class="btn btn-default" href="https://maps.google.com/?q=Hovedgaden 20, 4652 Hårlev">Find os her &raquo;</a></p>
+
     </div>
 </div>
