Ændrede hvem er vi

--- a/24SportWebkatalog/Views/Home/Index.cshtml
+++ b/24SportWebkatalog/Views/Home/Index.cshtml
@@ -9,11 +9,18 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="container col-md-4">
         <h2>Hvem er vi?</h2>
-        <p>
-            Tekst om firma, hvem er vi, hvor længe har vi gjort dette og hvordan startede det?
-        </p>
+
+        <a href="#demo" class="btn btn-default" data-toggle="collapse">Klik her for at vide mere om os &raquo;</a>
+        <div id="demo" class="collapse">
+
+            René Hansen startede “24 Sportspræmier & Emblemer” tilbage i 1993. Forretningen startede egentlig med at sælge bronzemønter. René fik idéen til at sælge mønterne, da han arbejdede som terapeut på et behandlingshjem. Mønterne var en slags milepæle, der skulle motivere folk til at lægge deres misbrug på hylden og komme videre med deres liv. Efter nogle år begyndte kunderne at efterspørge flere produkter, såsom pokaler, til deres lokale sportsklub. Det blev hurtigt et større forretningsområde og konceptet med “24 Sportspræmier og Emblemer” blev skabt. Selvom forretningen løbende blev større og større, måtte René i den første årrække supplere indkomsten med et arbejde hos Roskilde Postkontor. Det har aldrig generet René at arbejde hårdt for sine drømme og kunder, hvilket er et princip, som René fortsat lever efter i dag.
+
+            I dag er “24 Sportspræmier og Emblemer” blevet et familieforetagende, hvor både René Hansen og hans kone, Annette Hansen, arbejder fuldtid i virksomheden. Det hænder endda at deres søn får lov at hjælpe lidt til med at pudse pokalerne.
+
+        </div>
+
     </div>
     <div class="col-md-4">
         <h2>Hvad Levere vi?</h2>
