--- a/24SportWebkatalog/Views/Shared/_Layout.cshtml
+++ b/24SportWebkatalog/Views/Shared/_Layout.cshtml
@@ -23,7 +23,17 @@
                     <li>@Html.ActionLink("Login", "Login", "Account")</li>
                     <li>@Html.ActionLink("Katalog", "MainCatalog", "Catalog")</li>
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Indkøbskurv", "", "")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-unchecked "></span> <span class="glyphicon glyphicon-shopping-cart"></span>  Indkøbskurv <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Vare nr.1</a></li>
+                            <li><a href="#">Vare nr.2</a></li>
+                            <li><a href="#">Vare nr.3</a></li>
+                            <li><a href="#">Vare nr.4</a></li>
+                            <li><a href="#">Vare nr.5</a></li>
+
+
+                    </li>
                     @if (User.IsInRole("User"))
                     {
                         @Html.ActionLink("Profil", "action name");
@@ -43,3 +53,9 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+
+<script>
+
+    $('.dropdown-toggle').dropdown()
+
+</script>
