--- a/24SportWebkatalog/Views/Shared/_Layout.cshtml
+++ b/24SportWebkatalog/Views/Shared/_Layout.cshtml
@@ -26,11 +26,10 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-unchecked "></span> <span class="glyphicon glyphicon-shopping-cart"></span>  Indkøbskurv <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Vare nr.1</a></li>
-                            <li><a href="#">Vare nr.2</a></li>
-                            <li><a href="#">Vare nr.3</a></li>
-                            <li><a href="#">Vare nr.4</a></li>
-                            <li><a href="#">Vare nr.5</a></li>
+                            <li><a href="#">BS.ME71.01</a></li>
+                            <li><a href="#">BS.ME71.01</a></li>
+                            <li><a href="#">BS.ME71.02</a></li>
+                            <li><a href="#">BS.ME71.26</a></li>
 
 
                     </li>
